--- a/reset.css
+++ b/reset.css
@@ -26,7 +26,6 @@ time, mark, audio, video {
     padding:0;
     border:0;
     outline:0;
-    font-size:100%;
     vertical-align:baseline;
     background:transparent;
 }
@@ -35,99 +34,99 @@ time, mark, audio, video {
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
-	font-family: inherit;
-	font-size: inherit;
-	line-height: inherit;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 article,aside,footer,header,nav,section,main {
-	display: block;
+  display: block;
 }
 
 address,caption,cite,code,dfn,em,strong,th,var {
-	font-style: normal;
-	font-weight: normal
+  font-style: normal;
+  font-weight: normal
 }
 
 html {
-	font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-	-webkit-text-size-adjust: 100%;
-	-ms-text-size-adjust: 100%;
-	scroll-behavior: smooth;
-	text-rendering: optimizeSpeed;
-	font-feature-settings: "palt" 1;
-	min-height: 100vh;
-	font-size: 1.6rem;
-	line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  font-feature-settings: "palt" 1;
+  min-height: 100vh;
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
 
 
 a,
 a:visited {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 ol,
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 img,
 video {
-	max-width: 100%;
+  max-width: 100%;
 }
 
 img {
-	border-style: none;
-	max-width: 100%;
-	display: block;
+  border-style: none;
+  max-width: 100%;
+  display: block;
 }
 
 blockquote,
 q {
-	quotes: none;
+  quotes: none;
 }
 
 blockquote::after,
 blockquote::before,
 q::after,
 q::before {
-	content: "";
-	content: none;
+  content: "";
+  content: none;
 }
 
 [hidden] {
-	display: none !important;
+  display: none !important;
 }
 
 [disabled] {
-	cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 :focus:not(:focus-visible) {
-	outline: none;
+  outline: none;
 }
 
 [hidden] {
-	display: none !important;
+  display: none !important;
 }
 
 [disabled] {
-	cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 :focus:not(:focus-visible) {
-	outline: none;
+  outline: none;
 }
 
 /* フォーム */
@@ -135,27 +134,29 @@ input,
 button,
 textarea,
 select {
-	font: inherit;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
+  font: inherit;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 button{
-	border:none;
-	padding: 0;
+  border:none;
+  padding: 0;
+  background: transparent;
+  outline: none;
 }
 input,
 select {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
 /* 見たくない人用に、すべてのアニメーションとトランジションを削除 */
 @media (prefers-reduced-motion: reduce) {
-	* {
-		animation-duration: 0.01ms !important;
-		animation-iteration-count: 1 !important;
-		transition-duration: 0.01ms !important;
-		scroll-behavior: auto !important;
-	}
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
