--- a/_mixins.scss
+++ b/_mixins.scss
@@ -184,7 +184,78 @@
 }
 
 
+//吹き出し作成中
+	$baloonInnerColor:#ccc;//吹き出し内側色
+	$baloonBorderColor:#ccc;//吹き出し枠線色
+	$baloonSize:40px;//吹き出し大きさ決めるやつ 単位自由
+	$baloonPos:25%;//吹き出し位置だすやつ 単位自由
+	$baloonBorderWidth:1px;//吹き出し枠線 px推奨
+	$baloonRatio:.4;//吹き出しの縦横比率を調整する数値
 
+@mixin baloon($baloonInnerColor:#ccc,
+$baloonBorderColor:#333,
+$baloonSize:40px,
+$baloonPos:5%,
+$baloonBorderWidth:0,
+$baloonRatio:.4) {
+		position: relative;
+		border: $baloonBorderWidth solid $baloonBorderColor;
+	  background: $baloonInnerColor;
+		//吹き出し
+
+		&::after{
+		  position: absolute;
+  		top: 0;
+  		border: solid transparent;
+  		content: '';
+  		height: 0;
+  		width: 0;
+  		right:calc(100% - #{$baloonBorderWidth});
+  		border-color: rgba($baloonInnerColor, 0);
+  		border-right-color: $baloonInnerColor;
+  		border-right-width: $baloonSize;
+      border-left-width: 0;
+
+      border-top-width: calc(#{$baloonSize}*#{$baloonRatio});
+  		border-bottom-width: calc(#{$baloonSize}*#{$baloonRatio});
+  		margin-top: $baloonPos;
+	  }
+	  
+	  @if $baloonBorderWidth == 0 {
+	    
+	  } @else {
+  	  &::before{//吹き出しボーダー
+  	    position: absolute;
+    		top: 0;
+    		border: solid transparent;
+    		content: '';
+    		height: 0;
+    		width: 0;
+    		right: 100%;
+    		border-color: rgba($baloonBorderColor, 0);
+    		border-right-color: $baloonBorderColor;
+    		border-right-width: calc(#{$baloonSize} + #{$baloonBorderWidth});
+  
+    		border-top-width: calc((#{$baloonSize}*#{$baloonRatio} + #{$baloonBorderWidth}));
+    		border-bottom-width: calc((#{$baloonSize}*#{$baloonRatio} + #{$baloonBorderWidth}));
+    		border-left-width: 0;
+    		margin-top: calc(#{$baloonPos} - #{$baloonBorderWidth});
+    	}
+	  }
+	}//baloon
+.baloon-wrap {
+	  width:80%;
+	  position:absolute;
+	  top:50%;
+	  left:50%;
+	  transform:translate(-50%,-50%);
+}
+	
+.baloon {
+  width:100%;
+  height:300px;
+  @include baloon;
+}
 
 
 
