--- a/_mixins.scss
+++ b/_mixins.scss
@@ -54,36 +54,42 @@
 	@return $number;
 }
 
+//line-height: lh(16,24);
+@function lh($fz, $lh) {
+	@return #{$lh / $fz};
+}
+
 //テキストにトラッキングかかってたとき用トラッキングの値を（）内に入れる
-//@include tracking(-200);
-@mixin tracking($tracking) {
-	letter-spacing: ($tracking / 1000 ) + em;
+//letter-spacing: ls(150);
+@function ls($tracking) {
+	@return #{($tracking / 1000) + em};
 }
 
 //fontsize100%のサイトでremを直感的に指定。
-@mixin fz($size, $base: 16) {
-	font-size: $size / $base + rem;
+//font-size: rem(16);
+@function rem($px) {
+	@return #{$px / 10}rem;
 }
 
 //画像ファイルの末尾に依ってブレークポイントで画像を切替える
 @mixin imgSwitch($break:$bk-md) {
-	img[src$='_sp.jpg'],
-	img[src*='_sp.jpg?'],
-	img[src$='_sp.svg'],
-	img[src*='_sp.svg?'],
-	img[src$='_sp.png'],
-	img[src*='_sp.png?'] {
+	[src$='_sp.jpg'],
+	[src*='_sp.jpg?'],
+	[src$='_sp.svg'],
+	[src*='_sp.svg?'],
+	[src$='_sp.png'],
+	[src*='_sp.png?'] {
 		display: block;
 		@media screen and (min-width: $break) {
 			display: none;
 		}
 	}
-	img[src$='_pc.jpg'],
-	img[src*='_pc.jpg?'],
-	img[src$='_pc.svg'],
-	img[src*='_pc.svg?'],
-	img[src$='_pc.png'],
-	img[src*='_pc.png?'] {
+	[src$='_pc.jpg'],
+	[src*='_pc.jpg?'],
+	[src$='_pc.svg'],
+	[src*='_pc.svg?'],
+	[src$='_pc.png'],
+	[src*='_pc.png?'] {
 		display: none;
 		@media screen and (min-width: $break) {
 			display: block;
