--- a/reset.css
+++ b/reset.css
@@ -51,6 +51,7 @@ address,caption,cite,code,dfn,em,strong,th,var {
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -58,12 +59,13 @@ body {
   -ms-text-size-adjust: 100%;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  font-feature-settings: "palt" 1;
+  font-feature-settings: "palt"1;
   min-height: 100vh;
-  font-size: 1.6rem;
-  line-height: 1.5;
 }
 
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
 
 a,
 a:visited {
@@ -86,8 +88,8 @@ video {
   max-width: 100%;
 }
 
-img {
-  border-style: none;
+img,
+picture {
   max-width: 100%;
   display: block;
 }
@@ -127,12 +129,14 @@ select {
   -moz-appearance: none;
   appearance: none;
 }
-button{
-  border:none;
+
+button {
+  border: none;
   padding: 0;
   background: transparent;
   outline: none;
 }
+
 input,
 select {
   vertical-align: middle;
